# hello_world

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  Makefile  README.md  build.sh  hello-world.cpp  helloWorld.cpp  run.sh
Adder/: Adder.cpp  CMakeLists.txt
lib/Adder/: CMakeLists.txt  Makefile  adder.cpp  adder.h  adder.hpp  cmake_install.cmake
scripts/: build.sh  run.sh
src/: hello-world.cpp
